--- a/package.json
+++ b/package.json
@@ -58,9 +58,13 @@
     "webpack-dev-server": "4.11.1"
   },
   "dependencies": {
+    "@bem-react/classname": "1.5.12",
     "express": "4.18.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redis": "4.5.1",
+    "socket.io": "4.5.4",
+    "socket.io-client": "4.5.4",
     "tslib": "2.4.1"
   }
 }
