--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
       "indent": [2, 2],
       "no-unused-vars": "warn",
       "react/function-component-definition": "off",
-      "no-param-reassign": "off"
+      "no-param-reassign": "off",
+      "no-plusplus": "off"
     },
     "settings": {
       "import/parsers": {
